# ldms-platform

./: .cursorrules  .gitignore  .output.txt  AGENTS.md  Jenkinsfile  README.md  commit_message.txt  commit_msg_junie.txt  package-lock.json
.cursor/agents/: api-designer.md  backend-developer.md  database-architect.md  event-handler.md  frontend-developer.md  java-code-reviewer.md  mobile-developer.md  test-engineer.md
.cursor/rules/: ldms-microservice-package-structure.mdc  ldms-system-architecture.mdc  platform-portal-org-onboarding.mdc  project-lx-platform-pricing.mdc
.github/agents/: api-designer.agent.md  backend-developer.agent.md  database-architect.agent.md  event-handler.agent.md  frontend-developer.agent.md  java-code-reviewer.agent.md  ldms-ui-agent.agent.md  (+2 more)
docs/: PROJECT-LX-PLATFORM-PRICING-GUIDE.md  RUST_FILE_SERVICE_INTEGRATION.md
infrastructure/: .env.example  docker-compose.yml
ldms-backend/: pom.xml
ldms-config-repo/: .env.example  application.yml
ldms-file-service/: .gitignore  Cargo.toml  Dockerfile  config.toml
ldms-file-service/src/: config.rs  errors.rs  main.rs  models.rs  state.rs
ldms-file-service/src/eureka/: mod.rs
ldms-file-service/src/handlers/: delete.rs  download.rs  health.rs  metadata.rs  mod.rs  root.rs  ui.rs  upload.rs  validation.rs
ldms-file-service/src/middleware/: auth.rs
ldms-file-service/src/storage/: local.rs  mod.rs  s3.rs  traits.rs
scripts/: dev-gemini-env.sh  dev-llm-env.sh  fix-intellij-run-configs.sh  fix-microservice-package-dirs.sh  migrate-microservice-packages.sh  sync-bot-knowledge.sh
(+4608 files in other folders)
