[package]
name = "ldms-file-service"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
actix-rt = "2"
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"
config = "0.14"
thiserror = "2"
anyhow = "1"
mime_guess = "2"
sha2 = "0.10"
base64 = "0.22"
futures-util = "0.3"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
mime = "0.3"
hostname = "0.4"
regex = "1"
urlencoding = "2"

[dependencies.aws-sdk-s3]
version = "1"
optional = true

[dependencies.aws-config]
version = "1"
optional = true

[features]
default = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
